# attrs

./: .gitignore  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  codeql.yml  main.yml
src/attr/: __init__.py  validators.py
src/attrs/: __init__.py
tests/: test_packaging.py
